--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.4"
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
+    "@mui/styled-engine-sc": "^5.11.0",
+    "node-sass": "^8.0.0",
+    "styled-components": "^5.3.6",
+    "ts-node": "^10.9.1"
   }
 }
