--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "@mui/material": "^5.11.4",
     "@mui/styled-engine-sc": "^5.11.0",
     "node-sass": "^8.0.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.2",
     "styled-components": "^5.3.6",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.2",
+    "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.0.10"
   }
 }
