--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
+
 {
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -8,12 +12,38 @@
     "node-sass": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
     "ts-node": "^10.9.1",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   },
+  "scripts": {
+    "project": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
-    "@types/react-dom": "^18.0.10"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
