--- a/package.json
+++ b/package.json
@@ -1,49 +1,19 @@
-
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.4",
-    "@mui/styled-engine-sc": "^5.11.0",
-    "node-sass": "^8.0.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2",
-    "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.6",
-    "ts-node": "^10.9.1",
-    "tsx": "^3.12.2",
-    "typescript": "^4.9.4"
-  },
+  "name": "service-task-list",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "project": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VolodymyrBochuliak/Service-Task-List.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/VolodymyrBochuliak/Service-Task-List/issues"
   },
-  "devDependencies": {
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
-  }
+  "homepage": "https://github.com/VolodymyrBochuliak/Service-Task-List#readme"
 }
